# wip-nameless-gaem

./: .gitignore  .travis.yml  CMakeLists.txt  Debug.cpp  Debug.hpp  Entity.cpp  Entity.hpp  Level.cpp  Level.hpp  Makefile  README.md  default.gms  main.cpp
include/: Entity.hpp
levels/: default.ams
src/: Entity.cpp  Level.cpp  main.cpp
